--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -41,7 +41,7 @@ static=Global, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://ra
 static=Streaming, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Streaming.png
 static=Final, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Final.png
 static=StreamingSE, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/StreamingSE.png
-static=Game, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/lol.png
+static=Game, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/lol.png
 static=Emby, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/emby.png
 
 url-latency-benchmark=香港, server-tag-regex=(?=.*(香港|HK|HGC|(?i)Hong))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, check-interval=3600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/HK.png
@@ -317,12 +317,11 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 15 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js, tag=电信营业厅签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/10000.png, enabled=true
 # 支付宝消费券
 52 59 9 * * 0,5,6 https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay_voucher.js, tag=支付宝消费券, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/alipay.png, enabled=true
-# 哔哩
-0 1 0 1 * ? https://raw.githubusercontent.com/lowking/Scripts/master/bilibili/privilegeReceive.js
-# 微博
-1 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js, tag=新浪微博
-# 微博
-1 0 * * * https://github.com/CheYanShang/QuantumultX/raw/master/xmyd.js, tag=小米运动
+# 哔哩哔哩签到
+0 1 0 1 * ? https://raw.githubusercontent.com/lowking/Scripts/master/bilibili/privilegeReceive.js, tag=Bilibili, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Bilibili.png, enabled=true
+# 新浪微博签到
+1 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js, tag=新浪微博 img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/weibo.png, enabled=true
+
 
 [mitm]
 passphrase = 99C2E02F
