--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -318,9 +318,9 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 # 支付宝消费券
 52 59 9 * * 0,5,6 https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay_voucher.js, tag=支付宝消费券, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/alipay.png, enabled=true
 # 哔哩哔哩签到
-0 1 0 1 * ? https://raw.githubusercontent.com/lowking/Scripts/master/bilibili/privilegeReceive.js, tag=Bilibili, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Bilibili.png, enabled=true
+0 1 0 1 * ? https://raw.githubusercontent.com/lowking/Scripts/master/bilibili/privilegeReceive.js, tag=Bilibili, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/bilibili.png, enabled=true
 # 新浪微博签到
-1 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js, tag=新浪微博 img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/weibo.png, enabled=true
+1 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js, tag=新浪微博, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/weibo.png, enabled=true
 
 
 [mitm]
