--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -294,7 +294,7 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 # 芒果TV签到
 6 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/mgtv/mgtv.js, tag=芒果TV签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/mgtv.png, enabled=true
 # 腾讯视频签到
-7 0 * * * https://github.com/chavyleung/scripts/raw/master/videoqq/videoqq.js, tag=腾讯视频签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/videoqq.png, enabled=false
+; 7 0 * * * https://github.com/chavyleung/scripts/raw/master/videoqq/videoqq.js, tag=腾讯视频签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/videoqq.png, enabled=true
 # 嘀嘀出行签到
 0 1,20,21 * * * https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, tag=滴滴出行, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/didi.png, enabled=true
 # 哈啰出行
