--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -319,7 +319,7 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 # 新浪微博签到
 1 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js, tag=新浪微博, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/weibo.png, enabled=true
 # 京东来客有礼
-0 9 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/lkyl.js, tag=新浪微博, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/weibo.png, enabled=true
+16 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/lkyl.js, tag=来客有礼, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/jd.png, enabled=true
 
 [mitm]
 passphrase = 99C2E02F
