--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -315,7 +315,7 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 # 新浪微博签到
 16 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js, tag=新浪微博, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/weibo.png, enabled=true
 # 哔哩哔哩漫画签到
-17 0 * * * https://raw.githubusercontent.com/NobyDa/Script/master/Bilibili-DailyBonus/Manga.js, tag=Bili漫画签到
+17 0 * * * https://raw.githubusercontent.com/NobyDa/Script/master/Bilibili-DailyBonus/Manga.js, tag=Bili漫画签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/manga.png, enabled=true
 # 支付宝消费券
 52 59 9 * * 0,5,6 https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay_voucher.js, tag=支付宝消费券, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/alipay.png, enabled=true
 # 嘀嘀出行签到
