--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -143,6 +143,9 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 
 ### 购物比价
 # 京东比价
+# 不生效或失效的检查一下配置有没有这两条复写，删除试试
+; ^https?:\/\/api\.m\.jd.com\/client\.action\?functionId=start - reject
+; ^https?:\/\/api\.m\.jd.com\/client\.action\?functionId=(start|queryMaterialAdverts) - reject
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
 # 淘宝比价
 # 不生效或失效的需要卸载 tb 重装，注意不开脚本进 tb 会失效
