--- a/QuantumultXiPhone.conf
+++ b/QuantumultXiPhone.conf
@@ -128,6 +128,9 @@ https://raw.githubusercontent.com/echoops/emby/main/Filter/Emby.list, tag=Emby, 
 
 ### 购物比价
 # 京东比价
+# 不生效或失效的检查一下配置有没有这两条复写，删除试试
+; ^https?:\/\/api\.m\.jd.com\/client\.action\?functionId=start - reject
+; ^https?:\/\/api\.m\.jd.com\/client\.action\?functionId=(start|queryMaterialAdverts) - reject
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
 # 淘宝比价
 # 不生效或失效的需要卸载 tb 重装，注意不开脚本进 tb 会失效
