--- a/QuantumultXiPhone.conf
+++ b/QuantumultXiPhone.conf
@@ -77,12 +77,16 @@ ip6-cidr, fe80::/10, direct
 -geoip, cn, direct
 final, Final
 
-# 知乎去广告
-DOMAIN,118.89.204.198,REJECT
-DOMAIN-KEYWORD,118.89.204.198,REJECT
+# 知乎去广告，以下规则请放置在filter_local最顶部
 IP-CIDR,118.89.204.198/32,REJECT
-DOMAIN,appcloud2.in.zhihu.com,REJECT
+IP6-CIDR,2402:4e00:1200:ed00:0:9089:6dac:96b6/128,REJECT
+HOST,118.89.204.198,REJECT
+# 知乎去广告，以下规则的位置越前方越好
+HOST,mqtt.zhihu.com,reject
+HOST,sugar.zhihu.com,reject
+HOST,appcloud2.in.zhihu.com,REJECT
 USER-AGENT,AVOS*,REJECT
+
 # 召唤师 
 host, sspanel.net, Global
 host, zhs.tw, Global
