--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -281,6 +281,8 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrit
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/startup/startup.qxrewrite, tag=开屏去广告, enabled=true
 # 知乎助手 去广告及体验增强
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.qxrewrite, tag=ZhihuAdBlockPlus, update-interval=86400, opt-parser=false, enabled=true
+# 哔哩去广告
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.qxrewrite, tag=哔哩哔哩_去广告, update-interval=86400, opt-parser=false, enabled=true
 # EmbyUnlocked
 https://raw.githubusercontent.com/echoops/limitless/main/QuantumultX/Rewrite/emby.qxrewrite, tag=EmbyUnlocked, update-interval=86400, opt-parser=false, enabled=true
 # BoxJs
