--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -285,7 +285,7 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 1 0,12,23 * * * https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, tag=京东多合一签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/jd.png, enabled=true
 # 京东到家 (By @barrymchen, @GideonSenku & @Macsuny)
 # APP登陆账号后，点击主页'签到',即可
-2 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jddj.js, tag=京东到家, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/jddj.png, enabled=true
+2 0 * * * https://github.com/GoodHolidays/Scripts/raw/master/Task/jddj.js, tag=京东到家, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/jddj.png, enabled=true
 # 美团签到
 3 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js, tag=美团签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/meituan.png, enabled=true
 # 叮咚买菜签到
@@ -306,7 +306,7 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 # 抖音极速版签到
 11 0 * * * https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/dyjsb.js, tag=抖音极速版, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/TikTok.png, enabled=true
 # 快手极速版签到
-12 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js, tag=快手极速版, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/kuaishou.png, enabled=true
+12 0 * * * https://github.com/GoodHolidays/Scripts/raw/master/Task/kuaishou.js, tag=快手极速版, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/kuaishou.png, enabled=true
 # 网易云音乐签到
 ; 1. 先登录: <https://music.163.com/m/login>
 ; 2. 再访问: <https://music.163.com/#/user/level>
@@ -315,7 +315,7 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 # 电信营业厅签到
 14 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js, tag=电信营业厅签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/10000.png, enabled=true
 # 新浪微博签到
-15 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js, tag=新浪微博, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/weibo.png, enabled=true
+15 0 * * * https://github.com/GoodHolidays/Scripts/raw/master/Task/weibo.js, tag=新浪微博, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/weibo.png, enabled=true
 # 哔哩哔哩漫画签到
 16 0 * * * https://raw.githubusercontent.com/NobyDa/Script/master/Bilibili-DailyBonus/Manga.js, tag=Bili漫画签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/manga.png, enabled=true
 # 快看漫画签到
