--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -321,7 +321,7 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 # 支付宝消费券
 52 59 9 * * 0,5,6 https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay_voucher.js, tag=支付宝消费券, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/alipay.png, enabled=true
 # 嘀嘀出行签到
-0 1,20,21 * * * https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, tag=滴滴出行, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/didi.png, enabled=true
+# 0 1,20,21 * * * https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, tag=滴滴出行, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/didi.png, enabled=true
 
 
 [mitm]
