--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -37,7 +37,7 @@ server=/*.xiaomi.com/119.29.29.29
 
 
 [policy]
-url-latency-benchmark=Global, 香港, 美国, 台湾, 日本, proxy, check-interval=86400, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Global.png
+static=Global, 香港, 美国, 台湾, 日本, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Global.png
 static=Streaming, 香港, 美国, 台湾, 日本, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Streaming.png
 static=Final, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
 static=StreamingSE, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/StreamingSE.png
