--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -251,6 +251,9 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bil
 # BoxJs
 https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs, update-interval=86400, opt-parser=false, enabled=true
 
+# Q-Search
+https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Q-Search_All_in_one.conf, tag=Q-Search, update-interval=86400, opt-parser=false, enabled=true
+
 
 [task_local]
 # 京东多合一签到
