--- a/Q-Search.conf
+++ b/Q-Search.conf
@@ -105,9 +105,9 @@ hostname = duckduckgo.com
 # tw (Twitter)
 ^https:\/\/duckduckgo.com\/\?q=tw\+([^&]+).+ url 302 https://twitter.com/search?q=$1
 # sspai xxx (少数派站内搜索)
-^https:\/\/duckduckgo.com\/\?q=sspai(\+|%20)([^&]+).+ url 302 https://sspai.com/search/post/$1
+^https:\/\/duckduckgo.com\/\?q=sspai\+([^&]+).+ url 302 https://sspai.com/search/post/$1
 # ssp xxx (Google 搜索少数派)
-^https:\/\/duckduckgo.com\/\?q=ssp(\+|%20)([^&]+).+ url 302 https://www.google.com/search?as_q=$2&as_sitesearch=sspai.com
+^https:\/\/duckduckgo.com\/\?q=ssp\+([^&]+).+ url 302 302 https://www.google.com/search?as_q=$2&as_sitesearch=sspai.com
 # csdn: CSDN
 ^https:\/\/duckduckgo.com\/\?q=csdn\+([^&]+).+ url 302 https://so.csdn.net/so/search/s.do?q=$1&t=&u=
 
