--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -176,9 +176,9 @@ https://github.com/CheYanShang/emby/raw/main/Filter/Emby.list, tag=Emby, update-
 ; tw (Twitter)
 ^https:\/\/duckduckgo.com\/\?q=tw\+([^&]+).+ url 302 https://twitter.com/search?q=$1
 ; sspai xxx (少数派站内搜索)
-^https:\/\/duckduckgo.com\/\?q=sspai\+([^&]+).+ url 302 https://sspai.com/search/post/$1
+^https:\/\/duckduckgo.com\/\?q=sspai(\+|%20)([^&]+).+ url 302 https://sspai.com/search/post/$2
 ; ssp xxx (Google 搜索少数派)
-^https:\/\/duckduckgo.com\/\?q=ssp\+([^&]+).+ url 302 302 https://www.google.com/search?as_q=$2&as_sitesearch=sspai.com
+^https:\/\/duckduckgo.com\/\?q=ssp(\+|%20)([^&]+).+ url 302 https://www.google.com/search?as_q=$2&as_sitesearch=sspai.com
 # > 购物
 ; zdm: 什么值得买
 ^https:\/\/duckduckgo.com\/\?q=zdm\+([^&]+).+ url 302 https://search.m.smzdm.com/?v=b&s=$1
