--- a/Q-Search.conf
+++ b/Q-Search.conf
@@ -41,8 +41,7 @@
 # gd:  Google Drive资源
 # tgd: TG搜索Google Drive资源
  
-# bi: 必应
-# bd：百度搜索
+# b：百度搜索
 # ddg：DuckDuckGo 搜索
 # 无指令则转 Google 搜索
 
@@ -142,7 +141,7 @@ hostname = duckduckgo.com
 
 # 默认搜索
 
-# bd: 百度
+# b: 百度
 ^https:\/\/duckduckgo.com\/\?q=bd\+([^&]+).+ url 302 https://www.baidu.com/s?wd=$1
 
 # ddg: DuckDuckGo 
