--- a/Q-Search.conf
+++ b/Q-Search.conf
@@ -142,7 +142,7 @@ hostname = duckduckgo.com
 # 默认搜索
 
 # b: 百度
-^https:\/\/duckduckgo.com\/\?q=bd\+([^&]+).+ url 302 https://www.baidu.com/s?wd=$1
+^https:\/\/duckduckgo.com\/\?q=b\+([^&]+).+ url 302 https://www.baidu.com/s?wd=$1
 
 # ddg: DuckDuckGo 
 ^https:\/\/duckduckgo.com\/\?q=ddg\+([^&]+).+ url 302 https://duckduckgo.com/?ia=about&q=$1
