--- a/Q-Search.conf
+++ b/Q-Search.conf
@@ -42,7 +42,6 @@
 # tgd: TG搜索Google Drive资源
  
 # b：百度搜索
-# ddg：DuckDuckGo 搜索
 # 无指令则转 Google 搜索
 
 
@@ -143,9 +142,8 @@ hostname = duckduckgo.com
 
 # b: 百度
 ^https:\/\/duckduckgo.com\/\?q=b\+([^&]+).+ url 302 https://www.baidu.com/s?wd=$1
-
-# ddg: DuckDuckGo 
-^https:\/\/duckduckgo.com\/\?q=ddg\+([^&]+).+ url 302 https://duckduckgo.com/?ia=about&q=$1
+# bd: 百度
+^https:\/\/duckduckgo.com\/\?q=bd\+([^&]+).+ url 302 https://www.baidu.com/s?wd=$1
 
 # 无指令: 谷歌
 ^https:\/\/duckduckgo.com\/\?q=([^&]+).+ url 302 https://www.google.com/search?q=$1
