--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -165,14 +165,15 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhi
 # 哔哩去广告(与“开屏去广告”中BiliBili重复)
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.qxrewrite, tag=哔哩哔哩_去广告, update-interval=86400, opt-parser=false, enabled=true
 
-# GetCookies
-https://github.com/CheYanShang/QuantumultX/raw/master/GetCookies.conf, tag=GetCookies, update-interval=86400, opt-parser=false, enabled=false
-
+# FakeVIP
+https://github.com/CheYanShang/QuantumultX/raw/master/FakeVIP.conf, tag=FakeVIP, update-interval=86400, opt-parser=false, enabled=true
+# Q-Search
+https://github.com/CheYanShang/QuantumultX/raw/master/Q-Search.conf, tag=Q-Search, update-interval=86400, opt-parser=false, enabled=true
 # BoxJs
 https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs, update-interval=86400, opt-parser=false, enabled=true
 
-# Q-Search
-https://github.com/CheYanShang/QuantumultX/raw/master/Q-Search.conf, tag=Q-Search, update-interval=86400, opt-parser=false, enabled=true
+# GetCookies
+https://github.com/CheYanShang/QuantumultX/raw/master/GetCookies.conf, tag=GetCookies, update-interval=86400, opt-parser=false, enabled=false
 
 [task_local]
 # 京东多合一签到
