--- a/GetCookies.conf
+++ b/GetCookies.conf
@@ -1,3 +1,6 @@
+hostname = ifac*.iqiyi.com, act.vip.iqiyi.com, as.xiaojukeji.com, wapside.189.cn, maicai.api.ddxq.mobi, gameapi.hellobike.com, cloud.umetrip.com, daojia.jd.com, api.m.jd.com, credits.bz.mgtv.com, i.meituan.com, *.video.qq.com, mobwsa.ximalaya.com, music.163.com, weclub.ccc.cmbchina.com, aweme*.snssdk.com, nebula.kuaishou.com, api.weibo.cn, passport.biligame.com, api.kkmh.com
+
+
 ### Get Cookies
 # 爱奇艺 获取Cookie
 ^https?:\/\/iface(\d)?\.iqiyi\.com\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
