--- a/FakeVIP.conf
+++ b/FakeVIP.conf
@@ -1,3 +1,6 @@
+hostname = mobile-api.adguard.com, buy.itunes.apple.com, api.busuu.com, dayone.*, dayone.me, license.pdfexpert.com, backend.getdrafts.com, lambda.us-east-1.amazonaws.com, duolingo-leaderboards-prod.duolingo.com, api.memrise.com, api.getmimo.com, lcs-mobile-cops.adobe.io, mb3admin.com
+
+
 ### FakeVIP
 # Adguard Premium
 ^https:\/\/mobile-api\.adguard\.com\/api\/1\.0\/ios_validate_receipt$ url 302 https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/adguard.js
@@ -40,7 +43,5 @@ https:\/\/api\.revenuecat\.com\/v1\/(subscribers|receipts) url script-response-b
 # 网易蜗牛读书 VIP (By yxiaocai and JO2EY)
 ^https?://p\.du\.163\.com/readtime/info.json url reject
 ^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/wnyd.js
-# 微信读书 免费无限卡
-; ^https?:\/\/i\.weread\.qq.com url script-response-body https://github.com/CheYanShang/QuantumultX/blob/master/Script/weread.js
 # Emby 解锁播放权限
 ^https:\/\/mb3admin\.com\/admin\/service(\/registration\/validateDevice|\/appstore\/register|\/registration\/validate|\/registration\/getStatus|\/supporter\/retrievekey) url script-echo-response https://raw.githubusercontent.com/qiangxinglin/Emby/main/scripts/emby.js
