--- a/FakeVIP.conf
+++ b/FakeVIP.conf
@@ -1,4 +1,4 @@
-hostname = mobile-api.adguard.com, buy.itunes.apple.com, api.busuu.com, dayone.*, dayone.me, license.pdfexpert.com, backend.getdrafts.com, lambda.us-east-1.amazonaws.com, duolingo-leaderboards-prod.duolingo.com, api.memrise.com, api.getmimo.com, lcs-mobile-cops.adobe.io, mb3admin.com
+hostname = mobile-api.adguard.com, buy.itunes.apple.com, api.busuu.com, dayone.*, dayone.me, license.pdfexpert.com, backend.getdrafts.com, lambda.us-east-1.amazonaws.com, duolingo-leaderboards-prod.duolingo.com, api.memrise.com, api.getmimo.com, lcs-mobile-cops.adobe.io, mb3admin.com, api.flexibits.com
 
 
 ### FakeVIP
