--- a/task.conf
+++ b/task.conf
@@ -1,3 +1,7 @@
+hostname= ifac*.iqiyi.com, act.vip.iqiyi.com, as.xiaojukeji.com, wapside.189.cn, maicai.api.ddxq.mobi, gameapi.hellobike.com, cloud.umetrip.com, daojia.jd.com, api.m.jd.com, credits.bz.mgtv.com, i.meituan.com, *.video.qq.com, mobwsa.ximalaya.com, music.163.com, aweme*.snssdk.com, nebula.kuaishou.com, api.weibo.cn, passport.biligame.com, api.kkmh.com
+
+
+
 [task_local]
 # 京东多合一签到
 1 0,12,23 * * * https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, tag=京东多合一签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/jd.png, enabled=true
