--- a/Q-Search.conf
+++ b/Q-Search.conf
@@ -16,6 +16,7 @@
 # tf:   Google 搜索 TestFlight
 
 # yd：有道词典搜索
+# dc: 欧路词典
 # trc: Google 译至中
 # tre: Google 译至英
 # trj: Google 译至日
@@ -71,6 +72,9 @@ hostname = duckduckgo.com
 # > 翻译
 # yd   (有道)
 ^https:\/\/duckduckgo.com\/\?q=yd\+([^&]+).+ url 302 http://dict.youdao.com/search?q=$1
+
+# dc   (欧路）
+^https:\/\/duckduckgo.com\/\?q=dc(\+|%20)([^&]+).+ url 302 eudic://dict/$2
 
 # trc  (Google 译至中)
 ^https:\/\/duckduckgo.com\/\?q=trc\+([^&]+).+ url 302 https://translate.google.com/#view=home&op=translate&sl=auto&tl=zh-CN&text=$1
