--- a/Q-Search.conf
+++ b/Q-Search.conf
@@ -16,7 +16,7 @@
 # tf:   Google 搜索 TestFlight
 
 # yd：有道词典搜索
-# dc: 欧路词典
+# eu: 欧路词典
 # trc: Google 译至中
 # tre: Google 译至英
 # trj: Google 译至日
@@ -51,6 +51,7 @@ hostname = duckduckgo.com
 
 #gi   (Google图片)
 ^https:\/\/duckduckgo.com\/\?q=gi\+([^&]+).+ url 302 https://www.google.com/search?&tbm=isch&q=$1
+
 # gh   (GitHub)
 ^https:\/\/duckduckgo.com\/\?q=gh\+([^&]+).+ url 302 https://github.com/search?q=$1
 
@@ -73,7 +74,7 @@ hostname = duckduckgo.com
 # yd   (有道)
 ^https:\/\/duckduckgo.com\/\?q=yd\+([^&]+).+ url 302 http://dict.youdao.com/search?q=$1
 
-# dc   (欧路）
+# eu   (欧路）
 ^https:\/\/duckduckgo.com\/\?q=dc(\+|%20)([^&]+).+ url 302 eudic://dict/$2
 
 # trc  (Google 译至中)
