--- a/Q-Search.conf
+++ b/Q-Search.conf
@@ -49,7 +49,7 @@
 
 hostname = duckduckgo.com
 
-#gi   (Google图片)
+# gi   (Google图片)
 ^https:\/\/duckduckgo.com\/\?q=gi\+([^&]+).+ url 302 https://www.google.com/search?&tbm=isch&q=$1
 
 # gh   (GitHub)
@@ -87,7 +87,7 @@ hostname = duckduckgo.com
 ^https:\/\/duckduckgo.com\/\?q=trj\+([^&]+).+ url 302 https://translate.google.com/#view=home&op=translate&sl=auto&tl=ja&text=$1
 
 
-# 社区
+# > 社区
 # db：豆瓣
 ^https:\/\/duckduckgo.com\/\?q=db\+([^&]+).+ url 302 https://m.douban.com/search/?query=$1
 
@@ -126,7 +126,7 @@ hostname = duckduckgo.com
 # tm: 天猫
 ^https:\/\/duckduckgo.com\/\?q=tm\+([^&]+).+ url 302 https://s.m.tmall.com/m/search.htm?q=$1
 
-# 视频资源
+# > 视频资源
 
 # bli (哔哩哔哩) 
 ^https:\/\/duckduckgo.com\/\?q=bli\+([^&]+).+ url 302 https://m.bilibili.com/search?keyword=$1
@@ -143,12 +143,12 @@ hostname = duckduckgo.com
 # tgd  (t.me/gdurl 搜索 Google Drive 资源)
 ^https:\/\/duckduckgo.com\/\?q=tgd\+([^&]+).+ url 302 https://t.me/s/gdurl?q=$1
 
-# 默认搜索
+# > 默认搜索
 
 # b: 百度
 ^https:\/\/duckduckgo.com\/\?q=b\+([^&]+).+ url 302 https://www.baidu.com/s?wd=$1
 # bd: 百度
 ^https:\/\/duckduckgo.com\/\?q=bd\+([^&]+).+ url 302 https://www.baidu.com/s?wd=$1
 
-# 无指令: 谷歌
+# > 无指令: 谷歌
 ^https:\/\/duckduckgo.com\/\?q=([^&]+).+ url 302 https://www.google.com/search?q=$1
