--- a/Q-Search.conf
+++ b/Q-Search.conf
@@ -75,7 +75,7 @@ hostname = duckduckgo.com
 ^https:\/\/duckduckgo.com\/\?q=yd\+([^&]+).+ url 302 http://dict.youdao.com/search?q=$1
 
 # eu   (欧路）
-^https:\/\/duckduckgo.com\/\?q=dc(\+|%20)([^&]+).+ url 302 eudic://dict/$2
+^https:\/\/duckduckgo.com\/\?q=eu\+([^&]+).+ url 302 eudic://dict/$2
 
 # trc  (Google 译至中)
 ^https:\/\/duckduckgo.com\/\?q=trc\+([^&]+).+ url 302 https://translate.google.com/#view=home&op=translate&sl=auto&tl=zh-CN&text=$1
