--- a/Q-Search.conf
+++ b/Q-Search.conf
@@ -74,6 +74,9 @@ hostname = duckduckgo.com
 # yd   (有道)
 ^https:\/\/duckduckgo.com\/\?q=yd\+([^&]+).+ url 302 http://dict.youdao.com/search?q=$1
 
+# eu   (欧路）
+^https:\/\/duckduckgo.com\/\?q=eu\+([^&]+).+ url 302 eudic://dict/$1
+
 # trc  (Google 译至中)
 ^https:\/\/duckduckgo.com\/\?q=trc\+([^&]+).+ url 302 https://translate.google.com/#view=home&op=translate&sl=auto&tl=zh-CN&text=$1
 
