--- a/QuantumultXiPhone.conf
+++ b/QuantumultXiPhone.conf
@@ -44,7 +44,7 @@ static=Final, 香港, 美国, 台湾, 日本,新加坡, proxy, direct, img-url=h
 static=Game, 香港, 美国, 台湾, 日本,新加坡, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/LOL.png
 static=Emby, 香港, 美国, 台湾, 日本,新加坡, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/emby.png
 
-url-latency-benchmark=香港, server-tag-regex=(?=.*(香港|HK|HGC|(?i)Hong))^((?!(⓪|耗尽|(?i)IPLC|IEPL|game)).)*$, check-interval=86400, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/HK.png
+url-latency-benchmark=香港, server-tag-regex=(?=.*(香港|HK|HGC|(?i)Hong))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, check-interval=86400, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/HK.png
 url-latency-benchmark=美国, server-tag-regex=(?=.*(美国|美國|US|(?i)States|American))^((?!(⓪|耗尽|(?i)IPLC|IEPL|game)).)*$, check-interval=86400, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/US.png
 url-latency-benchmark=台湾, server-tag-regex=(?=.*(台湾|台灣|TW|(?i)Taiwan))^((?!(⓪|耗尽|(?i)IPLC|IEPL|game)).)*$, check-interval=86400, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/TW.png
 url-latency-benchmark=日本, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(⓪|耗尽|(?i)IPLC|IEPL|game)).)*$, check-interval=86400, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/JP.png
