--- a/GetCookies.conf
+++ b/GetCookies.conf
@@ -7,7 +7,7 @@ hostname = ifac*.iqiyi.com, act.vip.iqiyi.com, as.xiaojukeji.com, wapside.189.cn
 # 滴滴出行 获取cookie
 ^https:\/\/as\.xiaojukeji\.com\/ep\/as\/toggles\? url script-request-header https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js
 # 电信营业厅签到 获取cookies
-^https:\/\/wapside.189.cn:9001\/api\/home\/homeInfo url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.cookie.js
+;^https:\/\/wapside.189.cn:9001\/api\/home\/homeInfo url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.cookie.js
 # 叮咚买菜 获取cookie
 ^https:\/\/maicai.api.ddxq.mobi\/point\/home url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/mcdd/mcdd.cookie.js
 # 哈啰出行 获取cookie
