--- a/QuantumultXiPhone.conf
+++ b/QuantumultXiPhone.conf
@@ -49,7 +49,7 @@ url-latency-benchmark=美国, server-tag-regex=(?=.*(美国|美國|US|(?i)States
 url-latency-benchmark=台湾, server-tag-regex=(?=.*(台湾|台灣|TW|(?i)Taiwan))^((?!(⓪|耗尽|(?i)IPLC|IEPL|game)).)*$, check-interval=86400, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/TW.png
 url-latency-benchmark=日本, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(⓪|耗尽|(?i)IPLC|IEPL|game)).)*$, check-interval=86400, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/JP.png
 url-latency-benchmark=新加坡, server-tag-regex=(?=.*(新加坡|SG|(?i)Singapore))^((?!(⓪|耗尽|(?i)IPLC|IEPL|game)).)*$, check-interval=86400, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/SG.png
-url-latency-benchmark=综合, server-tag-regex=(?=.*(❸|))^((?!(⓪|❶|❷|耗尽|等级警报|(?i)IPLC|IEPL|game)).)*$, check-interval=86400, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/SG.png
+url-latency-benchmark=综合, server-tag-regex=(?=.*(❸|CN|))^((?!(⓪|❶|❷|耗尽|等级警报|(?i)IPLC|IEPL|game)).)*$, check-interval=86400, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/SG.png
 
 static=Guard, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Hijacking.png
 
