--- a/Q-Search.conf
+++ b/Q-Search.conf
@@ -77,6 +77,12 @@ hostname = duckduckgo.com
 # eu   (欧路）
 ^https:\/\/duckduckgo.com\/\?q=eu\+([^&]+).+ url 302 eudic://dict/$1
 
+# dlc xxx (DeepL 译至中)
+^https:\/\/duckduckgo.com\/\?q=dlc(\+|%20)([^&]+).+ url script-echo-response https://raw.githubusercontent.com/zZPiglet/Task/master/asset/DeepLQ-search.js
+
+# dle xxx (DeepL 译至英)
+^https:\/\/duckduckgo.com\/\?q=dle(\+|%20)([^&]+).+ url script-echo-response https://raw.githubusercontent.com/zZPiglet/Task/master/asset/DeepLQ-search.js
+
 # trc  (Google 译至中)
 ^https:\/\/duckduckgo.com\/\?q=trc\+([^&]+).+ url 302 https://translate.google.com/#view=home&op=translate&sl=auto&tl=zh-CN&text=$1
 
