--- a/Q-Search.conf
+++ b/Q-Search.conf
@@ -78,7 +78,7 @@ hostname = duckduckgo.com
 ^https:\/\/duckduckgo.com\/\?q=eu\+([^&]+).+ url 302 eudic://dict/$1
 
 # dlc xxx (DeepL 译至中)
-^https:\/\/duckduckgo.com\/\?q=dlc(\+|%20)([^&]+).+ url script-echo-response https://raw.githubusercontent.com/zZPiglet/Task/master/asset/DeepLQ-search.js
+^https:\/\/duckduckgo.com\/\?q=dlc(\+|%20)([^&]+).+ url script-echo-response DeepLQ-search.js
 
 # dle xxx (DeepL 译至英)
 ^https:\/\/duckduckgo.com\/\?q=dle(\+|%20)([^&]+).+ url script-echo-response https://raw.githubusercontent.com/zZPiglet/Task/master/asset/DeepLQ-search.js
