--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -60,7 +60,7 @@ static=流量, server-tag-regex=流量, img-url=https://raw.githubusercontent.co
 
 [server_remote]
 # 这里添加节点订阅链接
-https://zhs.futbol/link/2Fbp1kNNpFZBl5XM?mu=7&ox=1&tj=1 , tag=👻召唤师 👾江湖名号: KOHN_NN 🕸zhs.fun, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/zhs.png
+https://zhs.futbol/link/2Fbp1kNNpFZBl5XM?mu=7&ox=1&tj=1 , tag=机场：召唤师, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/zhs.png
 
 
 [filter_local]
